# stremio-light

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vue.config.js
scripts/: build.rs
src/: helpers.rs  main.rs  player.rs
src/app/: App.vue  main.ts  shims-vue.d.ts
src/app/assets/styles/: main.scss  variables.scss
src/app/components/: Menu.vue  View.vue
src/app/directives/: toTimer.ts
src/app/router/: index.ts
src/app/store/: player.ts
src/app/views/: Home.vue  Player.vue
