[package]
name = "stremio-light"
description = "Alternative client for Stremio"
version = "0.1.0"
edition = "2021"
build = "scripts/build.rs"

[dependencies]
wry = "0.12.2"
libmpv = { git = "https://github.com/tymmesyde/libmpv-rs", rev = "ffa9bdcb93fc85f02631809ce19bd5bf5fd7a61e" }
serde = "1.0.130"
serde_json = "1.0.68"
image = "0.23.14"
clap = "3.0.0-beta.5"
rust-embed = "6.2.0"
mime_guess = "2.0.3"
num = "0.4.0"
